src/main/resources/html/assets/styles/main.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');

html,
body {
    font-family: 'Roboto', sans-serif;
    background-color: #1f2b38 !important;
    color: #f5f5f5;
    display: block;
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
    max-width: 100%;
    overflow: hidden;
}

body {
    border-bottom: 5px rgb(224, 224, 224) solid;
}

#display {
    overflow-y: scroll;
    width: 100%;
    margin-top: 0 !important;
    border: 5px rgb(224, 224, 224) solid;
    border-bottom: none;
    border-top: none;
    height: 100%;
}


#topelement {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    align-content: center;
    height: 100%;
    max-height: 900px;
}

#regions {
    text-align: left;
}

#display::-webkit-scrollbar {
    width: 0.6rem;
}

#display::-webkit-scrollbar-track {
    background: #283a50;
    border-radius: 10px;
}

#display::-webkit-scrollbar-thumb {
    background: #ffffff;
    border-radius: 10px;
}

.main {
    display: block;
}

.extras {
    display: none;
}

.mitm {
    display: none;
}

.settings {
    display: none;
}

.console {
    display: none;
}

.spacing {
    width: 1rem;
}

.data {
    width: -webkit-fill-available;
}

.methodsFilter {
    border-radius: 8px;
    height: 28px;
    padding-left: 5px;
}

.methodsFilter option {
    padding: 10px;
}

.jwt-button {
    border-radius: 8px;
    height: 28px;
    margin-left: 5px;
}

.search-filter {
    border-radius: 8px;
    width: 100%;
    height: 24px;
}

.region {
    width: fit-content;
    height: fit-content;
    background-color: #e0e0e0 !important;
    border-color: #e0e0e0 !important;
}

.region:hover, .methodsFilter:hover {
    background-color: #ffffff !important;
    border-color: black !important;
}

.meow {
    width: 100%;
    flex-direction: row !important;
}

.show {
    height: fit-content;
    padding: 5px;
    background-color: #ffffff !important;
    column-gap: 1rem !important;
    flex-direction: column;
    display: flex;
    transition: background-color 0.5s ease-in-out;
    gap: 0.5rem !important;
    margin-top: 0.73rem;
    border-radius: 0px 0px 8px 8px;
}

.navbar {
    height: 4rem !important;
    background-color: #e0e0e0 !important;
    transition: all 0.5s ease-in-out;
    border-radius: 0rem;
    width: 100%;
    margin: 0 !important;
}

.navbar:hover {
    background-color: #ffffff !important;
}

.searchinghelp {
    width: 100% !important;
    color: #ffffff !important;
    background-color: #e0e0e0 !important;
    transition: all 0.5s ease-in-out !important;
    border: none !important;
    border-radius: 0rem !important;
    box-shadow: none !important;
}

.searchinghelp:hover {
    background-color: #ffffff !important;
    color: #000000 !important;
    border: 1px solid #1111118e !important;
    border-radius: 0.5rem !important;
}

.flexing {
    align-items: center;
    align-content: center;
}

.a-WHIFF {
    font-size: 0.8rem !important;
    display: inline-block;
}

.btn-warning {
    color: white !important;
}

.btn {
    height: fit-content !important;
    width: fit-content !important;
    font-size: 0.8rem !important;
}

.stack-vertical {
    flex-direction: column;
    display: flex;
    width: 100%;
}

.header-fixed {
    background-color: #0a0e12;
    position: fixed;
    width: 100%;
}

.header {
    align-content: center;
    align-items: center;
    display: flex;
    gap: 10px;
}

.ui-button:hover {
    cursor: pointer;
}

.hint {
    display: block;
}

.main-hint {
    background-color: #1f2b38;
    text-align: center;
    display: flex;
    height: 40px;
    gap: 10px;
}

.bonus-hint {
    border-radius: 0px 0px 8px 8px;
    background-color: #3a5169;
    overflow-wrap: break-word;
    overflow: hidden;
    display: flex;
    padding: 5px;
    height: 100%;
}

.method {
    background-color: #34495e;
    margin: auto auto auto 5px;
    border-radius: 8px;
    padding: 5px;
    width: 70px;
}

.methodsFilter {
    background-color: #e0e0e0 !important;
    border-color: #e0e0e0 !important;
    text-align: left !important;
}

.uri {
    background-color: #263544;
    white-space: nowrap;
    border-radius: 8px;
    margin-right: 5px;
    overflow: hidden;
    display: flex;
    margin: auto;
    padding: 5px;
    width: 100%;
}

.code {
    background-color: #34495e;
    border-radius: 8px;
    margin: auto;
    padding: 5px;
    width: 70px;
}

.expand {
    background-color: #34495e;
    margin: auto 5px auto auto;
    border-radius: 8px;
    padding: 5px;
}

.expand:hover {
    cursor: pointer;
}

.request {
    color: #ffffff !important;
}

.requestdata {
    border-right: 1px solid #1f2b38;
    border-radius: 8px 0px 0px 8px;
    background-color: #354557;
    width: 50%;
}

.responsedata {
    border-left: 1px solid #1f2b38;
    border-radius: 0px 8px 8px 0px;
    background-color: #4d6278;
    width: 50%;
}

.group-name {
    border-bottom: 3px solid #1f2b38;
    padding: 5px 0px 5px 5px;
}

.group-name:hover {
    cursor: pointer;
}

.group-main {
    background: #34495e;
    padding-right: 10px;
    text-align: right;
    padding: 5px;
}

.group-left {
    border-radius: 8px 0px 0px 0px;
}

.group-right {
    border-radius: 0px 8px 0px 0px;
}

.request-group {
    flex-direction: column;
    background: #34495e;
    border-radius: 8px;
    display: flex;
    padding: 5px;
    margin: 5px;
    gap: 5px;
}

.request-value {
    background: #263544;
    border-radius: 8px;
    padding: 5px;
    cursor: pointer;
}

.hidden {
    display: none;
}

.noselect {
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
    -khtml-user-select: none; /* Konqueror HTML */
    -moz-user-select: none; /* Old versions of Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none;
    /* Non-prefixed version, currently
                                      supported by Chrome, Edge, Opera and Firefox */
}

